fix: fix fancyindex style on mobile phone.

--- a/src/pages/fancyindex/index.module.css
+++ b/src/pages/fancyindex/index.module.css
@@ -11,7 +11,7 @@
 }
 
 .title-container {
-    max-width: 1530px;
+    max-width: 1446px;
     margin: auto;
     width: 100%;
 }
@@ -47,4 +47,19 @@
     padding: 4px 20px;
     vertical-align: middle;
     border-radius: 4px;
+}
+
+@media screen and (min-width:996px) {
+    .table {
+        margin: 32px;
+    }
+    .breadcrumbs {
+        margin: 16px 32px;
+    }
+}
+
+@media screen and (max-width:720px) {
+    .table tr>*:last-child {
+        display: none;
+    }
 }
